--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -157,3 +157,152 @@
   year={2011},
   publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
 }
+
+@article{puduppully2019data,
+  title={Data-to-text generation with entity modeling},
+  author={Puduppully, Ratish and Dong, Li and Lapata, Mirella},
+  journal={arXiv preprint arXiv:1906.03221},
+  year={2019}
+}
+
+
+@article{dale2020natural,
+  title={Natural language generation: The commercial state of the art in 2020},
+  author={Dale, Robert},
+  journal={Natural Language Engineering},
+  volume={26},
+  number={4},
+  pages={481--487},
+  year={2020},
+  publisher={Cambridge University Press}
+}
+
+@article{sharma2022innovations,
+  title={Innovations in Neural Data-to-text Generation},
+  author={Sharma, Mandar and Gogineni, Ajay and Ramakrishnan, Naren},
+  journal={arXiv preprint arXiv:2207.12571},
+  year={2022}
+}
+
+@article{duvsek2020evaluating,
+  title={Evaluating the state-of-the-art of end-to-end natural language generation: The e2e nlg challenge},
+  author={Du{\v{s}}ek, Ond{\v{r}}ej and Novikova, Jekaterina and Rieser, Verena},
+  journal={Computer Speech \& Language},
+  volume={59},
+  pages={123--156},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{sutskever2014sequence,
+  title={Sequence to sequence learning with neural networks},
+  author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+  journal={Advances in neural information processing systems},
+  volume={27},
+  year={2014}
+}
+
+@inproceedings{wiseman-etal-2017-challenges,
+    title = "Challenges in Data-to-Document Generation",
+    author = "Wiseman, Sam  and
+      Shieber, Stuart  and
+      Rush, Alexander",
+    booktitle = "Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing",
+    month = sep,
+    year = "2017",
+    address = "Copenhagen, Denmark",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/D17-1239",
+    doi = "10.18653/v1/D17-1239",
+    pages = "2253--2263",
+    abstract = "Recent neural models have shown significant progress on the problem of generating short descriptive texts conditioned on a small number of database records. In this work, we suggest a slightly more difficult data-to-text generation task, and investigate how effective current approaches are on this task. In particular, we introduce a new, large-scale corpus of data records paired with descriptive documents, propose a series of extractive evaluation methods for analyzing performance, and obtain baseline results using current neural generation methods. Experiments show that these models produce fluent text, but fail to convincingly approximate human-generated documents. Moreover, even templated baselines exceed the performance of these neural models on some metrics, though copy- and reconstruction-based extensions lead to noticeable improvements.",
+}
+
+@inproceedings{mei2016talk,
+  title={What to talk about and how? Selective Generation using LSTMs with Coarse-to-Fine Alignment},
+  author={Mei, Hongyuan and UChicago, TTI and Bansal, Mohit and Walter, Matthew R},
+  booktitle={Proceedings of NAACL-HLT},
+  pages={720--730},
+  year={2016}
+}
+
+
+@inproceedings{lebret-etal-2016-neural,
+    title = "Neural Text Generation from Structured Data with Application to the Biography Domain",
+    author = "Lebret, R{\'e}mi  and
+      Grangier, David  and
+      Auli, Michael",
+    booktitle = "Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2016",
+    address = "Austin, Texas",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/D16-1128",
+    doi = "10.18653/v1/D16-1128",
+    pages = "1203--1213",
+}
+
+
+@article{bahdanau2014neural,
+  title={Neural machine translation by jointly learning to align and translate},
+  author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1409.0473},
+  year={2014}
+}
+
+@article{gu2016incorporating,
+  title={Incorporating copying mechanism in sequence-to-sequence learning},
+  author={Gu, Jiatao and Lu, Zhengdong and Li, Hang and Li, Victor OK},
+  journal={arXiv preprint arXiv:1603.06393},
+  year={2016}
+}
+
+@article{novikova2017e2e,
+  title={The E2E dataset: New challenges for end-to-end generation},
+  author={Novikova, Jekaterina and Du{\v{s}}ek, Ond{\v{r}}ej and Rieser, Verena},
+  journal={arXiv preprint arXiv:1706.09254},
+  year={2017}
+}
+
+@inproceedings{puduppully2019dataselandplan,
+  title={Data-to-text generation with content selection and planning},
+  author={Puduppully, Ratish and Dong, Li and Lapata, Mirella},
+  booktitle={Proceedings of the AAAI conference on artificial intelligence},
+  volume={33},
+  number={01},
+  pages={6908--6915},
+  year={2019}
+}
+
+
+@article{chen2021neural,
+  title={Neural data-to-text generation with dynamic content planning},
+  author={Chen, Kai and Li, Fayuan and Hu, Baotian and Peng, Weihua and Chen, Qingcai and Yu, Hong and Xiang, Yang},
+  journal={Knowledge-Based Systems},
+  volume={215},
+  pages={106610},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{moryossef2019step,
+  title={Step-by-step: Separating planning from realization in neural data-to-text generation},
+  author={Moryossef, Amit and Goldberg, Yoav and Dagan, Ido},
+  journal={arXiv preprint arXiv:1904.03396},
+  year={2019}
+}
+
+@article{ferreira2019neural,
+  title={Neural data-to-text generation: A comparison between pipeline and end-to-end architectures},
+  author={Ferreira, Thiago Castro and van der Lee, Chris and Van Miltenburg, Emiel and Krahmer, Emiel},
+  journal={arXiv preprint arXiv:1908.09022},
+  year={2019}
+}
+
+@article{ji2022survey,
+  title={Survey of hallucination in natural language generation},
+  author={Ji, Ziwei and Lee, Nayeon and Frieske, Rita and Yu, Tiezheng and Su, Dan and Xu, Yan and Ishii, Etsuko and Bang, Yejin and Madotto, Andrea and Fung, Pascale},
+  journal={arXiv preprint arXiv:2202.03629},
+  year={2022}
+}
+
