--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -49,7 +49,7 @@
 
 \lstset{style=mystyle}
 
-\title{Sistema para la generación de resúmenes textuales de eventos deportivos independientes de la fuente de datos.}
+\title{Sistema para la generación de resúmenes textuales de eventos deportivos independiente de la fuente de datos}
 \author{\\\vspace{0.25cm}Abel Molina Sánchez}
 \advisor{\\\vspace{0.25cm}Dr. Yudivián Almeida Cruz\\\vspace{0.2cm}Lic. Manuel Santiago Fernández Arias}
 \degree{Licenciado en Ciencia de la Computación}
