add: actualization architecture

--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -39,6 +39,78 @@
   pages={25 - 49}
 }
 
+
+@article{goldberg1994using,
+  title={Using natural-language processing to produce weather forecasts},
+  author={Goldberg, Eli and Driedger, Norbert and Kittredge, Richard I},
+  journal={IEEE Expert},
+  volume={9},
+  number={2},
+  pages={45--53},
+  year={1994},
+  publisher={IEEE}
+}
+
+@article{reiter2005choosing,
+  title={Choosing words in computer-generated weather forecasts},
+  author={Reiter, Ehud and Sripada, Somayajulu and Hunter, Jim and Yu, Jin and Davy, Ian},
+  journal={Artificial Intelligence},
+  volume={167},
+  number={1-2},
+  pages={137--169},
+  year={2005},
+  publisher={Elsevier}
+}
+
+
+@article{kanerva2019template,
+  title={Template-free data-to-text generation of Finnish sports news},
+  author={Kanerva, Jenna and R{\"o}nnqvist, Samuel and Kekki, Riina and Salakoski, Tapio and Ginter, Filip},
+  journal={arXiv preprint arXiv:1910.01863},
+  year={2019}
+}
+
+@phdthesis{hasan2011automatic,
+  title={Automatic generation of multilingual sports summaries},
+  author={Hasan, Fahim Muhammad},
+  year={2011},
+  school={Applied Science: School of Computing Science}
+}
+
+@phdthesis{gunasiri2021automated,
+  title={Automated cricket news generation in Sri Lankan style using natural language generation},
+  author={Gunasiri, MHDY},
+  year={2021}
+}
+
+
+@article{theune2001data,
+  title={From data to speech: a general approach},
+  author={Theune, Mari{\"e}t and Klabbers, Esther and de Pijper, Jan-Roelof and Krahmer, Emiel and Odijk, Jan},
+  journal={Natural Language Engineering},
+  volume={7},
+  number={1},
+  pages={47--86},
+  year={2001},
+  publisher={Cambridge University Press}
+}
+
+@article{aires2016automatic,
+  title={Automatic generation of sports news},
+  author={Aires, Jo{\~a}o Pinto Barbosa Machado},
+  year={2016}
+}
+
+@inproceedings{van2017pass,
+  title={PASS: A Dutch data-to-text system for soccer, targeted towards specific audiences},
+  author={van der Lee, Chris and Krahmer, Emiel and Wubben, Sander},
+  booktitle={Proceedings of the 10th International Conference on Natural Language Generation},
+  pages={95--104},
+  year={2017}
+}
+
+
+
 @inproceedings{Dubou2003StatisticalAO,
   title={Statistical Acquisition of Content Selection Rules for Natural Language Generation},
   author={Pablo Ariel Dubou{\'e} and Kathleen McKeown},
@@ -306,3 +378,20 @@
   year={2022}
 }
 
+
+@article{kale2020text,
+  title={Text-to-text pre-training for data-to-text tasks},
+  author={Kale, Mihir and Rastogi, Abhinav},
+  journal={arXiv preprint arXiv:2005.10433},
+  year={2020}
+}
+
+@article{raffel2020exploring,
+  title={Exploring the limits of transfer learning with a unified text-to-text transformer.},
+  author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J and others},
+  journal={J. Mach. Learn. Res.},
+  volume={21},
+  number={140},
+  pages={1--67},
+  year={2020}
+}
