--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,oneside]{uhthesis}
 \usepackage{subfigure}
 \usepackage[ruled,lined,linesnumbered,titlenumbered,algochapter,spanish,onelanguage]{algorithm2e}
+\usepackage{svg}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsbsy}
