--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -277,7 +277,28 @@ sistemas son especialmente adaptables y prácticos para idiomas distintos del in
     En el presente trabajo se presenta un prototipo de sistema basado en la propuesta de un esquema general que permita definir esquemas específicos de entradas en formas de 4-tuplas (tuplas de cuatro elementos) de 
 conocimiento de un deporte de enfrentamiento dos a dos ( beisbol, voleibol, judo, etc). A su vez, se seleccionan dos deportes, en este caso, futbol y boxeo, y a partir de las especifiaciones planteadas se 
 se definen dos modelos capaces de generar un resumen informativo del evento en cuestión. Los modelos siguen el estandar basado en reglas plantillas simples de expresiones y oraciones.
-    
+
+
+    \begin{figure}[!]
+        \begin{center}
+            \includegraphics[width=\textwidth]{Graphics/arquitecturaprop2.png}
+        \end{center}
+        \caption{Arquitectura del modelo propuesto}
+        \label{arquitecturadelmodelo}
+    \end{figure}
+
+    afdgfd
+
+    %\begin{figure}[!]
+    %    \begin{center}
+    %        \includegraphics[width=\textwidth]{Graphics/arquitecturatesisOk.png}
+    %    \end{center}
+    %    \caption{Arquitectura del modelo propuesto}
+    %    \label{arquitecturadelmodelo2}
+    %\end{figure}
+
+
+ 
     %\begin{figure}[htbp]
     %    \begin{center}
     %        %\includesvg{Graphics/arquitecturatesis3.svg}
@@ -287,4 +308,12 @@ se definen dos modelos capaces de generar un resumen informativo del evento en c
     %    \label{arquitecturadelmodelo}
     %\end{figure}
 
+    %\def\svgwidth{\textwidth}
+            %\def\svgscale{1}
 
+    %\begin{figure}[htbp]
+    %    \centering
+    %    \input{Graphics/arquitecturatesis6.pdf_tex} 
+    %    \caption[]{Arquitectura del modelo utilizado}      
+    %    \label{arquitecturadelmodelo}
+    %\end{figure}
