--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -15,6 +15,9 @@
 \usepackage{xcolor}
 \usepackage{multicol}
 \usepackage{graphicx}
+
+\graphicspath{{Graphics/}}
+
 \floatstyle{plaintop}
 \restylefloat{table}
 \addbibresource{Bibliography.bib}
